# course_container_dev

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
.zed/: tasks.json
haskell/: README.md  course-part-haskell.cabal  justfile  package.yaml  stack.yaml
haskell/task0/: Task0.hs
haskell/utils/: Utils.hs
ocanren/: course_part_ocanren.opam  dune-project  justfile
ocanren/camlp5/: dune
ocanren/task0/: README.md  dune  lib.ml  main.ml
ocanren/task1/: dune  justfile  lib.ml
python/: .gitignore  justfile  pyproject.toml
python/task0/: task.py  tests.py
setup/: Makefile  ansible.cfg  justfile
setup/opam-ansible/: README.md
setup/playbooks/: setup.yml
setup/roles/ansible/tasks/: main.yml
setup/roles/common/files/: .bashrc
setup/roles/common/tasks/: main.yml
setup/roles/haskell/tasks/: main.yml
setup/roles/ocanren/tasks/: main.yml
setup/roles/python/tasks/: main.yml
setup/roles/tools/files/: .tmux.conf
setup/roles/tools/tasks/: main.yml
tools/: pyproject.toml
