; source: https://github.com/Kakadu/OCanren-basic-template/blob/master/demo2camlp5/dune

(env
 (_
  (flags
   (:standard -warn-error +5))))

(library
 (name task0_lib)
 (modules lib)
 (flags
  (:standard -rectypes -dsource))
 (libraries OCanren OCanren.tester)
 (wrapped false)
 (inline_tests)
 (preprocessor_deps %{project_root}/camlp5/pp5+gt+plugins+ocanren+dump.exe)
 (preprocess
  (pps
   ppx_inline_test
   OCanren-ppx.ppx_deriving_reify
   OCanren-ppx.ppx_fresh
   --
   -pp
   camlp5/pp5+gt+plugins+ocanren+dump.exe)))

(executable
 (name main)
 (modules main)
 (flags
  (:standard -rectypes))
 (libraries task0_lib)
 ; We use below a smaller preprocessor, but in principal any Camlp5-bases one works here
 (preprocessor_deps %{project_root}/camlp5/pp5+logger+dump.exe)
 (preprocess
  (pps
   OCanren-ppx.ppx_deriving_reify
   OCanren-ppx.ppx_fresh
   --
   -pp
   camlp5/pp5+logger+dump.exe)))

(cram
 (deps ./main.exe))
